--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 </div>
                 <div class="row">
                 <div class="portfolio-heading padd-15">
-                    <h2>My last projects :</h2>
+                    <h2>Mes projets :</h2>
                 </div>
                 </div>
                 <div class="row">
@@ -402,8 +402,6 @@
                         <h2>Contactez-moi</h2>
                     </div>
                 </div>
-                <h3 class="contact-title padd-15">Avez-vous des questions ?</h3>
-                <h4 class="contact-sub-title padd-15">JE SUIS A VOTRE SERVICE</h4>
                 <div class="papa">
                 <!-- Contact info item Star -->
                  <div class="contact-info-item padd-15">
@@ -434,8 +432,6 @@
                  </div>
                 <!-- Contact info item End -->
                  </div>
-                 <h3 class="contact-title padd-15">ENVOIE-MOI UN E-MAIL</h3>
-                <h4 class="contact-sub-title padd-15">JE RÉPOND TRÈS RAPIDEMENT AUX MESSAGES.</h4>
                 <!-- Contact Foem -->
                  <div class="row">
                     <div class="contact-from padd-15">
