--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span></span>
         </div>
         <ul class="nav">
-            <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+            <li><a href="#home" class="active"><i class="fa fa-home"></i>Accueil</a></li>
             <li><a href="#about"><i class="fa fa-user"></i>À propos</a></li>
             <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
             <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portefolio</a></li>
@@ -428,7 +428,7 @@
                  <div class="contact-info-item padd-15 ">
                     <div class="icon"><i class="fa fa-globe-europe"></i></div>
                     <h4>Website</h4>
-                    <p>smatdevsolutions.netlify</p>
+                    <p>https://smartdevsolutions.netlify.app</p>
                  </div>
                 <!-- Contact info item End -->
                  </div>
@@ -463,7 +463,7 @@
                         </div>
                         <div class="row">
                             <div class="form-item col-12 padd-15">
-                                <button type="submit" class="btn">Envoyer un Message</button>
+                                <button type="submit" class="btn">Envoyer</button>
                                 </div>
                             </div>
                         </div>
